--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,9 @@
 [user]
 	name = ianjakobs
-	email = ianjakobs@users.noreply.github.com
+	email = 92268919+ianjakobs@users.noreply.github.com
 [core]
-	excludesfile = ~/.gitignore
+	excludesFile = ~/.gitignore
 [fetch]
 	prune = true
 [push]
-	default = simple
+	autoSetupRemote = true
